[package]
name = "undefended"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
inspector = ["bevy-inspector-egui"]
debugdump = ["bevy_mod_debugdump"]

[dependencies]
bevy = "0.13"
bevy_rapier3d = { version = "0.25", features = ["debug-render-3d"] }
bevy_dolly = { version = "0.0.3" }
bevy_asset_loader = "0.20.0"
bevy-inspector-egui = { version = "0.23", optional = true }
leafwing-input-manager = "0.13"
# BLOCKED due to cuicui sub-dep
bevy-ui-navigation = { git = "https://github.com/rparrett/ui-navigation/", branch = "bevy-0.13" }
bevy_mod_debugdump = { version = "0.10", optional = true }
bevy_pipelines_ready = "0.3.0"
bevy_two_entities = { path = "../bevy_two_entities" }
bevy-tnua = "0.15.0"
bevy-tnua-physics-integration-layer = "0.2.0"
bevy-tnua-rapier3d = "0.3.0"

rand = "0.8.5"
serde = "*"
ron = "0.8.0"
bevy_mod_outline = "0.7.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "*", features = ["console", "Window", "Storage"] }
