[package]
name = "undefended"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
inspector = ["bevy-inspector-egui"]
debugdump = ["bevy_mod_debugdump"]

[dependencies]
bevy = "0.14"
bevy_rapier3d = { version = "0.27", features = ["debug-render-3d"] }
bevy_dolly = { version = "0.0.4" }
bevy_asset_loader = "0.21.0"
bevy-inspector-egui = { version = "0.25", optional = true }
leafwing-input-manager = "0.14"
bevy-alt-ui-navigation-lite = "0.2"
bevy_mod_debugdump = { version = "0.11", optional = true }
bevy_pipelines_ready = "0.4.0"
bevy_two_entities = "0.2"
bevy-tnua = "0.19.0"
bevy-tnua-physics-integration-layer = "0.4.0"
bevy-tnua-rapier3d = "0.7.0"
bevy_mod_outline = "0.8.0"
# https://github.com/nicopap/bevy-scene-hook/pull/12
bevy-scene-hook = { git = "https://github.com/stargazing-dino/bevy-scene-hook", branch = "update-14.0" }

rand = "0.8.5"
serde = "*"
ron = "0.8.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "*", features = ["console", "Window", "Storage"] }
